# qemu-embedded-firmware

./: CMakeLists.txt
boards/mps2-an505/: CMakeLists.txt
boards/mps2-an505/BareMetal/: CMakeLists.txt
boards/mps2-an505/BareMetal/application/: system_ARMCM33.c
boards/mps2-an505/BareMetal/startup/gcc/: gcc_arm.ld
boards/mps2-an505/Core/: CMakeLists.txt
boards/mps2-an505/Core/Inc/: lcd.h
boards/mps2-an505/Core/Src/: lcd.c
boards/mps2-an505/Drivers/: CMakeLists.txt
boards/mps2-an505/FreeRTOS/: CMakeLists.txt  Makefile
boards/mps2-an505/FreeRTOS/application/: main.c
boards/mps2-an505/FreeRTOS/startup/gcc/: gcc_arm.ld  startup_ARMCM33.s
boards/mps2-an505/threadx/: CMakeLists.txt
cmake/: arm-none-eabi-gcc.cmake
librtos/: CMakeLists.txt
libutils/: CMakeLists.txt
libutils/fault-dump/: CMakeLists.txt
libutils/fault-dump/sys/FreeRTOS/: stack-dump.c
