string(STRIP "${TARGET_PROJECT}" TARGET_PROJECT)
message(STATUS "Selected board project: [${TARGET_PROJECT}]")
if(TARGET_PROJECT STREQUAL "FreeRTOS")
    add_library(freertos_config INTERFACE)
    target_include_directories(freertos_config SYSTEM INTERFACE ${CMAKE_SOURCE_DIR}/boards/${BOARD}/FreeRTOS/application)
    add_subdirectory(FreeRTOS)
    add_library(rtos ALIAS freertos_kernel)
endif()
if(TARGET_PROJECT STREQUAL "threadx")
    add_subdirectory(threadx)
endif()
