string(STRIP "${TARGET_PROJECT}" TARGET_PROJECT)
message(STATUS "Selected board project: [${TARGET_PROJECT}]")
if(TARGET_PROJECT STREQUAL "FreeRTOS")
    add_subdirectory(FreeRTOS)
elseif(TARGET_PROJECT STREQUAL "BareMetal")
    add_subdirectory(BareMetal)
elseif(TARGET_PROJECT STREQUAL "threadx")
    add_subdirectory(threadx)
else()
    message(FATAL_ERROR "Unsupported PROJECT=\"${TARGET_PROJECT}\" for board ${BOARD}. Use FreeRTOS, BareMetal or threadx.")
endif()
